# new

./: et --hard 0e98031f32ca3f5a9064400cfd71d7fc542646b0  test.txt
grap A/: Makefile
grap A/include/: graph_adjlist.h
grap A/src/: graph_adjlist.c  main.c
graph_experiment_b/: CMakeLists.txt  README.md
graph_experiment_b/data/: scenic_input_demo.txt
graph_experiment_b/docs/: solution_b.md
graph_experiment_b/include/: console_utils.h  graph_interface.h  graph_matrix.h
graph_experiment_b/src/: console_utils.c  graph_matrix.c  main.c
